# bsem3dfwd

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
docs/: data.md  options.md
examples/: README.md
examples/borehole/: README.md
examples/borehole/res-1e-2/: make-emdata.py  make-model.py
examples/borehole/res-1e-2/output-1/: borehole.cfg
examples/borehole/res-1e-4/: make-emdata.py  make-model.py
examples/borehole/res-1e-6/: make-model.py
examples/dongguashan/: README.md
examples/dongguashan/half-space/: make-emdata.py  make-model.py
examples/dongguashan/lower-body/: make-model.py
examples/dongguashan/two-bodies/: make-model.py
examples/dongguashan/upper-body/: make-model.py
examples/dongguashan/upper-body/output-1/: dongguashan.cfg
examples/half-space/: README.md  make-emdata.py  make-model.py
examples/half-space/order-1/: half-space.cfg
examples/half-space/order-2/: half-space.cfg
examples/half-space/order-3/: half-space.cfg
examples/half-space/refine-1/: half-space.cfg
examples/half-space/refine-2/: half-space.cfg
examples/oil-gas/: README.md  oil-gas-model.ele  oil-gas-model.node
examples/oil-gas/oil-gas/: make-model.py
examples/oil-gas/water/: make-emdata.py  make-model.py
examples/oil-gas/water/output-1/: oil-gas.cfg
src/: CMakeLists.txt  em_ctx.cc  em_ctx.h  em_defs.h  em_fwd.cc  em_fwd.h  em_io.cc  em_io.h  em_la.cc  em_la.h  em_main.cc  em_response.cc  em_response.h  em_utils.cc  em_utils.h
